# data_serializer

./: CMakeLists.txt  README.md
cmake/: data_serializer.cmake.in  data_serializerConfigVersion.cmake.in
example/: example.cpp
include/: data_serializer.hpp
include/data_serializer/: data_serializer.hpp
src/: CMakeLists.txt  data_to_csv.cpp  example.cpp  recursive_data_to_csv.cpp
